Fix native focus styles overlapping controls

--- a/scss/config/_mixins.scss
+++ b/scss/config/_mixins.scss
@@ -10,7 +10,8 @@
   box-shadow: none;
 
   &:focus,
-  &:focus-visible {
+  &:focus-visible,
+  &:active {
     outline: none;
   }
 }
